; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-cgroup-util.c_test_slice_to_path.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-cgroup-util.c_test_slice_to_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"foobar.slice\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"foobar-waldo.slice\00", align 1
@.str.2 = private unnamed_addr constant [32 x i8] c"foobar.slice/foobar-waldo.slice\00", align 1
@.str.3 = private unnamed_addr constant [21 x i8] c"foobar-waldo.service\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@SPECIAL_ROOT_SLICE = common dso_local global i8* null, align 8
@.str.4 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.5 = private unnamed_addr constant [9 x i8] c"--.slice\00", align 1
@.str.6 = private unnamed_addr constant [2 x i8] c"-\00", align 1
@.str.7 = private unnamed_addr constant [12 x i8] c"-foo-.slice\00", align 1
@.str.8 = private unnamed_addr constant [11 x i8] c"-foo.slice\00", align 1
@.str.9 = private unnamed_addr constant [11 x i8] c"foo-.slice\00", align 1
@.str.10 = private unnamed_addr constant [15 x i8] c"foo--bar.slice\00", align 1
@.str.11 = private unnamed_addr constant [25 x i8] c"foo.slice/foo--bar.slice\00", align 1
@.str.12 = private unnamed_addr constant [10 x i8] c"a-b.slice\00", align 1
@.str.13 = private unnamed_addr constant [18 x i8] c"a.slice/a-b.slice\00", align 1
@.str.14 = private unnamed_addr constant [16 x i8] c"a-b-c-d-e.slice\00", align 1
@.str.15 = private unnamed_addr constant [60 x i8] c"a.slice/a-b.slice/a-b-c.slice/a-b-c-d.slice/a-b-c-d-e.slice\00", align 1
@.str.16 = private unnamed_addr constant [14 x i8] c"foobar@.slice\00", align 1
@.str.17 = private unnamed_addr constant [19 x i8] c"foobar@waldo.slice\00", align 1
@.str.18 = private unnamed_addr constant [21 x i8] c"foobar@waldo.service\00", align 1
@.str.19 = private unnamed_addr constant [13 x i8] c"-foo@-.slice\00", align 1
@.str.20 = private unnamed_addr constant [12 x i8] c"-foo@.slice\00", align 1
@.str.21 = private unnamed_addr constant [12 x i8] c"foo@-.slice\00", align 1
@.str.22 = private unnamed_addr constant [15 x i8] c"foo@@bar.slice\00", align 1
@.str.23 = private unnamed_addr constant [25 x i8] c"foo.slice/foo@@bar.slice\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_slice_to_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_slice_to_path() #0 {
  %1 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 0)
  %2 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.2, i64 0, i64 0), i32 0)
  %3 = load i32, i32* @EINVAL, align 4
  %4 = sub nsw i32 0, %3
  %5 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.3, i64 0, i64 0), i8* null, i32 %4)
  %6 = load i8*, i8** @SPECIAL_ROOT_SLICE, align 8
  %7 = call i32 @test_slice_to_path_one(i8* %6, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.4, i64 0, i64 0), i32 0)
  %8 = load i32, i32* @EINVAL, align 4
  %9 = sub nsw i32 0, %8
  %10 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i64 0, i64 0), i8* null, i32 %9)
  %11 = load i32, i32* @EINVAL, align 4
  %12 = sub nsw i32 0, %11
  %13 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.6, i64 0, i64 0), i8* null, i32 %12)
  %14 = load i32, i32* @EINVAL, align 4
  %15 = sub nsw i32 0, %14
  %16 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.7, i64 0, i64 0), i8* null, i32 %15)
  %17 = load i32, i32* @EINVAL, align 4
  %18 = sub nsw i32 0, %17
  %19 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.8, i64 0, i64 0), i8* null, i32 %18)
  %20 = load i32, i32* @EINVAL, align 4
  %21 = sub nsw i32 0, %20
  %22 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.9, i64 0, i64 0), i8* null, i32 %21)
  %23 = load i32, i32* @EINVAL, align 4
  %24 = sub nsw i32 0, %23
  %25 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.10, i64 0, i64 0), i8* null, i32 %24)
  %26 = load i32, i32* @EINVAL, align 4
  %27 = sub nsw i32 0, %26
  %28 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.11, i64 0, i64 0), i8* null, i32 %27)
  %29 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.12, i64 0, i64 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.13, i64 0, i64 0), i32 0)
  %30 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.14, i64 0, i64 0), i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str.15, i64 0, i64 0), i32 0)
  %31 = load i32, i32* @EINVAL, align 4
  %32 = sub nsw i32 0, %31
  %33 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.16, i64 0, i64 0), i8* null, i32 %32)
  %34 = load i32, i32* @EINVAL, align 4
  %35 = sub nsw i32 0, %34
  %36 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.17, i64 0, i64 0), i8* null, i32 %35)
  %37 = load i32, i32* @EINVAL, align 4
  %38 = sub nsw i32 0, %37
  %39 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.18, i64 0, i64 0), i8* null, i32 %38)
  %40 = load i32, i32* @EINVAL, align 4
  %41 = sub nsw i32 0, %40
  %42 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.19, i64 0, i64 0), i8* null, i32 %41)
  %43 = load i32, i32* @EINVAL, align 4
  %44 = sub nsw i32 0, %43
  %45 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.20, i64 0, i64 0), i8* null, i32 %44)
  %46 = load i32, i32* @EINVAL, align 4
  %47 = sub nsw i32 0, %46
  %48 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.21, i64 0, i64 0), i8* null, i32 %47)
  %49 = load i32, i32* @EINVAL, align 4
  %50 = sub nsw i32 0, %49
  %51 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.22, i64 0, i64 0), i8* null, i32 %50)
  %52 = load i32, i32* @EINVAL, align 4
  %53 = sub nsw i32 0, %52
  %54 = call i32 @test_slice_to_path_one(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.23, i64 0, i64 0), i8* null, i32 %53)
  ret void
}

declare dso_local i32 @test_slice_to_path_one(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
